Thu Aug  4 03:37:26 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: pick up dbm libs

	* sys_term.h: fix linux lossage, i.e. <linux/tty.h>
	* configure.in: check for STREAMSPTY (hopefully)

	* Makefile.in:
	* configure.in: make install changes

Tue Jul 26 18:23:01 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: fix missing $(srcdir)

Mon Jul 25 02:35:16 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: check for utmpx
