@@ -9,6 +9,8 @@ AC_PROG_INSTALL
 KRB_INCLUDE
 ISODE_INCLUDE
 AC_HAVE_LIBRARY(ndbm)
+AC_HAVE_LIBRARY(socket)
+AC_HAVE_LIBRARY(nsl)
 AC_HAVE_LIBRARY(dbm)
 AC_HAVE_LIBRARY(termcap,AC_DEFINE(TERMCAP)
 LIBS="$LIBS -ltermcap")
